Tests/InvalidTests/Test2_symbol_undefined/test.as
.entry LIST
.extern W
MAIN: add r3, list
mov r1